# nf_transport

./: .gitignore  README.md  pyproject.toml
src/nf_transport/: __init__.py
src/nf_transport/activities/: __init__.py  process_data.py
src/nf_transport/choice_models/: choice_model_tests.py  database_process.py  logpd.py  mnl_model.py  mxl_model.py  nfvi.py  parameter.py  posterior_viz.py  run_model_comparison.py  utility.py
src/nf_transport/choice_models/estimates/: sm_posterior.npz  sm_posterior_planar.npz  sm_posterior_realNVP.npz
